 include/pqxx/result.hxx, include/pqxx/robusttransaction.hxx,
 include/pqxx/tablestream.hxx, include/pqxx/tablewriter.hxx,
 include/pqxx/transaction_base.hxx, include/pqxx/transactor.hxx,
 include/pqxx/trigger.hxx, include/pqxx/util.hxx:
  - Reviewed documentation comments for code snippets
  - Updated a few more old 1.x-style identifiers
  - Other minor fixes
2006-02-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Fixed broken std namespace check
  - Fixed broken --with-std option
  - Make std namespace check check most-preferred namespaces first
  - Made output for std namespace check a little clearer
  - Finally fixed some messy output lines in configure script
  - Check for extra socket libraries that may need to be linked in
  - Finally fixed "NULL fdsets in select()" check
 test/test087.cxx:
  - Fixed includes for Cygwin, thanks Bert Hinrichs
2006-02-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Always include winsock2.h/unistd.h if available, thanks Bert Hinrichs
2006-02-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/binarystring.cxx:
  - Retired some old TODO items
2006-01-19  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/Doxyfile.in:
  - Enable treeview sidebar
2006-01-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Check for stlport _STL namespace
  - Option for enabling/disabling "long long" support
2006-01-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/preprelease:
  - No longer test against g++ 2.95
 include/pqxx/util.hxx:
  - Minor change to PQAlloc, in preparation for threading/locking support
2006-01-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in:
  - Check for PQprepare()
 doc/libpqxx.xml:
  - Added encoding specification
 include/pqxx/connection_base.hxx, include/pqxx/transaction_base.hxx,
 src/connection_base.cxx, src/transaction_base.cxx, test/test085.cxx:
  - Redid prepared statements API and implementation
  - Incompatible change!